# fastgpt-json-authoring-skill

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: hr-recruiting-assistant.json
skills/fastgpt-json-authoring/: SKILL.md
skills/fastgpt-json-authoring/agents/: openai.yaml
skills/fastgpt-json-authoring/references/: authoring-workflow.md  industrial-authoring.md  json-schema.md  node-coverage.md  node-templates.md  template-first-vs-export-calibrated.md
skills/fastgpt-json-authoring/scripts/: fastgpt_canvas_inspect.py
tests/: test_fastgpt_canvas_inspect.py
tests/fixtures/: minimal_valid_app.json  risky_backedge_app.json
